makelog/7.log
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/gpio.c:17:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/link.c:17:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/recv.c:19:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/xmit.c:18:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/gpio.c:17:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/main.c:19:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/link.c:17:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/recv.c:19:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/xmit.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/main.c:19:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/antenna.c:17:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/init.c:26:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/init.c:26:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/antenna.c:17:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/channel.c:17:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/channel.c:17:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/ath9k.h:29:0,
                 from drivers/net/wireless/ath/ath9k/mci.c:20:
drivers/net/wireless/ath/ath9k/debug.h:224:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/mci.c:20:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
drivers/net/wireless/ath/ath9k/gpio.c:171:13: warning: ‘ath9k_gen_timer_start’ defined but not used [-Wunused-function]
 static void ath9k_gen_timer_start(struct ath_hw *ah,
             ^
make[5]: *** [drivers/net/wireless/ath/ath9k/antenna.o] Error 1
make[5]: *** Waiting for unfinished jobs....
make[5]: *** [drivers/net/wireless/ath/ath9k/link.o] Error 1
make[5]: *** [drivers/net/wireless/ath/ath9k/beacon.o] Error 1
make[5]: *** [drivers/net/wireless/ath/ath9k/channel.o] Error 1
make[5]: *** [drivers/net/wireless/ath/ath9k/mci.o] Error 1
make[5]: *** [drivers/net/wireless/ath/ath9k/gpio.o] Error 1
make[5]: *** [drivers/net/wireless/ath/ath9k/init.o] Error 1
make[5]: *** [drivers/net/wireless/ath/ath9k/main.o] Error 1
drivers/net/wireless/ath/ath9k/recv.c:791:13: warning: ‘ath9k_rx_accept’ defined but not used [-Wunused-function]
 static bool ath9k_rx_accept(struct ath_common *common,
             ^
drivers/net/wireless/ath/ath9k/recv.c:876:12: warning: ‘ath9k_process_rate’ defined but not used [-Wunused-function]
 static int ath9k_process_rate(struct ath_common *common,
            ^
drivers/net/wireless/ath/ath9k/recv.c:926:13: warning: ‘ath9k_process_rssi’ defined but not used [-Wunused-function]
 static void ath9k_process_rssi(struct ath_common *common,
             ^
drivers/net/wireless/ath/ath9k/recv.c:999:12: warning: ‘ath_process_fft’ defined but not used [-Wunused-function]
 static int ath_process_fft(struct ath_softc *sc, struct ieee80211_hdr *hdr,
            ^
drivers/net/wireless/ath/ath9k/recv.c:1169:13: warning: ‘ath9k_is_mybeacon’ defined but not used [-Wunused-function]
 static bool ath9k_is_mybeacon(struct ath_softc *sc, struct ieee80211_hdr *hdr)
             ^
make[5]: *** [drivers/net/wireless/ath/ath9k/recv.o] Error 1
make[5]: *** [drivers/net/wireless/ath/ath9k/xmit.o] Error 1
make[4]: *** [drivers/net/wireless/ath/ath9k] Error 2
make[3]: *** [drivers/net/wireless/ath] Error 2
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [drivers/net/wireless] Error 2
make[1]: *** [drivers/net] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [drivers] Error 2
